[gd_scene load_steps=5 format=3 uid="uid://cg01y5a2gemnx"]

[ext_resource type="Script" path="res://Scenes/victory_overlay.gd" id="1_32hbn"]
[ext_resource type="Texture2D" uid="uid://mbuvb56elvtm" path="res://Sprites/BackgroundImages/GGJ 2024 - Copy of Victory Overlay(1).jpg" id="1_wn22b"]
[ext_resource type="PackedScene" uid="uid://b8j586ho4bfhf" path="res://Nodes/cloud_collider.tscn" id="2_y1x23"]
[ext_resource type="FontFile" uid="uid://b7u6y1ir2jdfk" path="res://Fonts/Caveat-Bold.ttf" id="4_8sdb3"]

[node name="VictoryOverlay" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_32hbn")

[node name="Ggj2024-CopyOfVictoryOverlay(1)" type="Sprite2D" parent="."]
position = Vector2(576.25, 324.25)
scale = Vector2(0.941537, 0.792534)
texture = ExtResource("1_wn22b")

[node name="cloud_collider" parent="." instance=ExtResource("2_y1x23")]
position = Vector2(1063, 598)
scale = Vector2(1.75, 1.5)

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 613.0
offset_top = 142.0
offset_right = 1060.0
offset_bottom = 523.0

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 648.0
offset_top = 185.0
offset_right = 1060.0
offset_bottom = 524.0

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_8sdb3")
theme_override_font_sizes/font_size = 28
text = "Traits:"

[node name="Label2" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_8sdb3")
theme_override_font_sizes/font_size = 20

[node name="bodyPosition" type="Node2D" parent="."]
position = Vector2(379, 318)

[node name="attachPoint" type="Node2D" parent="."]
position = Vector2(379, 316)
scale = Vector2(0.7, 0.7)

[connection signal="clicked" from="cloud_collider" to="." method="_on_cloud_collider_clicked"]
